# openAPI-v1.0.0.yaml
@@ -423,67 +423,6 @@ paths:
           description: Too many requests
         "500":
           description: Internal Server Error
-  /items/{id}/suppliers:
-    get:
-      tags:
-        - items
-      summary: Get all suppliers of an item
-      description: return all suppliers of an item in json object
-      operationId: getSuppliersOfItem
-      parameters:
-        - name: id
-          in: path
-          description: ID of the item to return its suppliers
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        "200":
-          description: Successful Operation
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  suppliers:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        id:
-                          type: integer
-                          format: int64
-                        name:
-                          type: string
-                        email:
-                          type: string
-                        phone:
-                          type: string
-                      required:
-                        - id
-                        - name
-                        - email
-                        - phone
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-        "401":
-          description: Unauthorized Access
-        "403":
-          description: Forbidden Access
-        "404":
-          description: Item not found
-        "429":
-          description: Too many requests
-        "500":
-          description: Internal Server Error
   /suppliers:
     get:
       tags:
@@ -847,221 +786,6 @@ paths:
           description: Too many requests
         "500":
           description: Internal Server Error
-  /suppliers/{id}/item:
-    get:
-      tags:
-        - suppliers
-      summary: Get all items of a supplier
-      description: return all items of a supplier in json object
-      operationId: getItemsOfSupplier
-      parameters:
-        - name: id
-          in: path
-          description: ID of the supplier to return its items
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        "200":
-          description: Successful Operation
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  items:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        id:
-                          type: integer
-                          format: int64
-                        name:
-                          type: string
-                        description:
-                          type: string
-                        price:
-                          type: number
-                          format: double
-                        quantity:
-                          type: integer
-                          format: int32
-                      required:
-                        - id
-                        - name
-                        - description
-                        - price
-                        - quantity
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-        "401":
-          description: Unauthorized Access
-        "403":
-          description: Forbidden Access
-        "404":
-          description: Supplier not found
-        "429":
-          description: Too many requests
-        "500":
-          description: Internal Server Error
-  /suppliers/{id}/supply:
-    get:
-      tags:
-        - suppliers
-      summary: Get all supplies of a supplier
-      description: return all supplies of a supplier in json object
-      operationId: getSuppliesOfSupplier
-      parameters:
-        - name: id
-          in: path
-          description: ID of the supplier to return its supplies
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        "200":
-          description: Successful Operation
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  supplies:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        id:
-                          type: integer
-                          format: int64
-                        item_id:
-                          type: integer
-                          format: int64
-                        supplier_id:
-                          type: integer
-                          format: int64
-                        quantity:
-                          type: integer
-                          format: int32
-                        price_per_unit:
-                          type: number
-                          format: double
-                      required:
-                        - id
-                        - item_id
-                        - supplier_id
-                        - quantity
-                        - price_per_unit
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-        "401":
-          description: Unauthorized Access
-        "403":
-          description: Forbidden Access
-        "404":
-          description: Supplier not found
-        "429":
-          description: Too many requests
-        "500":
-          description: Internal Server Error
-    post:
-      tags:
-        - suppliers
-      summary: Add a new supply for a supplier
-      description: Add a new supply to the inventory
-      operationId: addSupplyForSupplier
-      requestBody:
-        description: Supply object that needs to be added to the inventory without the id
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                item_id:
-                  type: integer
-                  format: int64
-                supplier_id:
-                  type: integer
-                  format: int64
-                quantity:
-                  type: integer
-                  format: int32
-                price_per_unit:
-                  type: number
-                  format: double
-              required:
-                - item_id
-                - supplier_id
-                - quantity
-                - price_per_unit
-      responses:
-        "201":
-          description: Supply created
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  supply:
-                    type: object
-                    properties:
-                      id:
-                        type: integer
-                        format: int64
-                      item_id:
-                        type: integer
-                        format: int64
-                      supplier_id:
-                        type: integer
-                        format: int64
-                      quantity:
-                        type: integer
-                        format: int32
-                      price_per_unit:
-                        type: number
-                        format: double
-                    required:
-                      - id
-                      - item_id
-                      - supplier_id
-                      - quantity
-                      - price_per_unit
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-        "401":
-          description: Unauthorized Access
-        "403":
-          description: Forbidden Access
-        "415":
-          description: Unsupported Media Type
-        "429":
-          description: Too many requests
-        "500":
-          description: Internal Server Error
   /customers:
     get:
       tags:
@@ -1419,151 +1143,6 @@ paths:
           description: Forbidden Access
         "404":
           description: Customer not found
-        "415":
-          description: Unsupported Media Type
-        "429":
-          description: Too many requests
-        "500":
-          description: Internal Server Error
-  /customers/{id}/order:
-    get:
-      tags:
-        - customers
-      summary: Get all orders of a customer
-      description: return all orders of a customer in json object
-      operationId: getOrdersOfCustomer
-      parameters:
-        - name: id
-          in: path
-          description: ID of the customer to return its orders
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        "200":
-          description: Successful Operation
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  orders:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        id:
-                          type: integer
-                          format: int64
-                        item_id:
-                          type: integer
-                          format: int64
-                        customer_id:
-                          type: integer
-                          format: int64
-                        quantity:
-                          type: integer
-                          format: int32
-                        date:
-                          type: string
-                          format: date
-                      required:
-                        - id
-                        - item_id
-                        - customer_id
-                        - quantity
-                        - date
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-        "401":
-          description: Unauthorized Access
-        "403":
-          description: Forbidden Access
-        "404":
-          description: Customer not found
-        "429":
-          description: Too many requests
-        "500":
-          description: Internal Server Error
-    post:
-      tags:
-        - customers
-      summary: Add a new order for a customer
-      description: Add a new order to the inventory
-      operationId: addOrderForCustomer
-      requestBody:
-        description: Order object that needs to be added to the inventory without the id
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                item_id:
-                  type: integer
-                  format: int64
-                customer_id:
-                  type: integer
-                  format: int64
-                quantity:
-                  type: integer
-                  format: int32
-              required:
-                - item_id
-                - customer_id
-                - quantity
-      responses:
-        "201":
-          description: Order created
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  order:
-                    type: object
-                    properties:
-                      id:
-                        type: integer
-                        format: int64
-                      item_id:
-                        type: integer
-                        format: int64
-                      customer_id:
-                        type: integer
-                        format: int64
-                      quantity:
-                        type: integer
-                        format: int32
-                      date:
-                        type: string
-                        format: date
-                    required:
-                      - id
-                      - item_id
-                      - customer_id
-                      - quantity
-                      - date
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-        "401":
-          description: Unauthorized Access
-        "403":
-          description: Forbidden Access
         "415":
           description: Unsupported Media Type
         "429":
@@ -1973,72 +1552,6 @@ paths:
           description: Order not found
         "415":
           description: Unsupported Media Type
-        "429":
-          description: Too many requests
-        "500":
-          description: Internal Server Error
-  /orders/{id}/item:
-    get:
-      tags:
-        - orders
-      summary: Get all items of an order
-      description: Returns a items of an order in json object
-      operationId: getItemsOfOrder
-      parameters:
-        - name: id
-          in: path
-          description: ID of the order to return its items
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        "200":
-          description: Successful Operation
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  items:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        id:
-                          type: integer
-                          format: int64
-                        name:
-                          type: string
-                        description:
-                          type: string
-                        price:
-                          type: number
-                          format: double
-                        quantity:
-                          type: integer
-                          format: int32
-                      required:
-                        - id
-                        - name
-                        - description
-                        - price
-                        - quantity
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-        "401":
-          description: Unauthorized Access
-        "403":
-          description: Forbidden Access
-        "404":
-          description: Order not found
         "429":
           description: Too many requests
         "500":
