# src/main/java/com/example/ims/dto/OrderDTO.java
@@ -1,0 +1,22 @@
+package com.example.ims.dto;
+
+import lombok.Builder;
+import lombok.Data;
+
+import java.util.Date;
+import java.util.List;
+
+
+@Data
+@Builder
+public class OrderDTO {
+
+    private Long id;
+
+    private Date date;
+
+    private Long customerId;
+
+    List<OrderDetailsDTO> orderDetails;
+
+}
